# nsforest-cli

./: .readthedocs.yaml  Dockerfile  README.md  environment.yml  setup.cfg
.github/workflows/: docs.yml  test.yml
docs/: conf.py  index.rst
src/nsforest/: cli.py
