# setup.cfg
[metadata]
name = nsforest
author = NIH/NLM
author_email = adeslat@scitechcon.org
version = 0.1.0
description = Scaffolded Python bioinfo project
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
install_requires =
    typer[all]
    pandas
    scanpy
    numpy
    matplotlib
    seaborn
    scikit-learn
    rich
python_requires = >=3.8

[options.entry_points]
console_scripts =
    nsforest = nsforest.cli:app

